# ooplab4

./: CMakeLists.txt  main.cpp
includes/: array.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
src/: array.cpp  figure.cpp  point.cpp
tests/: tests.cpp
